# mlzoomcamp

./: Makefile  pyproject.toml
06-trees/: homework.ipynb
notebooks/01-intro/: homework.ipynb
notebooks/02-regression/: homework.ipynb
notebooks/03-churn-prediction/: homework.ipynb
notebooks/03-classification/: homework.ipynb
notebooks/04-evaluation/: homework.ipynb
notebooks/05-deployment/: Dockerfile  Dockerfile2  ping.py  predict.py  test.py
notebooks/06-trees/: homework.ipynb
notebooks/07-midterm/: DEPLOY_GUIDE.md  Dockerfile  README.md  deploy.sh  homework.ipynb  predict.py  test.py
notebooks/08-deep-learning/: homework.ipynb  pytorch.ipynb
